# jmdict_for_yomichan

./: .gitignore  .gitmodules  Cargo.toml
src/: frequency_parser.rs  frequency_stats.rs  jmdict_xml.rs  main.rs  yomichan.rs
src/word_frequency/: mod.rs  parser.rs  stats.rs
tests/: frequency-sample.txt  sample.xml
