[package]
name = "jmdict_for_yomichan"
version = "0.1.0"
edition = "2021"
description = "Create yomichan-compatible dictionary from raw JMdict XML source"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
clap = { version = "3.0.14", features = ["cargo"] }
fern = { version = "0.6.0", features = ["colored"] }
fs2 = "0.4.3"
log = "0.4.14"
quick-xml = "0.22.0"
regex = "1.5.4"
shellexpand = "2.1.0"
time = { version = "0.3.7", features = ["std", "formatting", "local-offset"] }
